# skia_vs2015

./: .gitignore  DEPS  README.md  go.mod  go.sum
include/core/: SkPath.h  SkPointList.h
include/core/container/: list.h  map.h  queue.h  stack.h  vector.h
include/core/container/includes/: algorithms.h  bidirectionalIterator.h  listNode.h  mapNode.h  randomAccessIterator.h  traits.h
include/extention_dll/win/: GLContext_angle.h
infra/bots/: cfg.json  jobs.json  tasks.json
infra/bots/gen_tasks_logic/: gen_tasks_logic.go
infra/bots/task_drivers/fm_driver/: fm_driver.go
infra/bots/task_drivers/run_wasm_gm_tests/: run_wasm_gm_tests.go
infra/config/: recipes.cfg
src/core/: SkPath.cpp  SkScan.h  SkScan_Hairline.cpp
src/gpu/: SkGpuDevice.cpp
vs2015/: build.bat
vs2015/static_debug_x64/: args.gn  build.ninja  build.ninja.d  skia.sln  toolchain.ninja
vs2015/static_debug_x86/: args.gn  build.ninja.d  skia.sln  toolchain.ninja
vs2015/static_release_x64/: args.gn  build.ninja  build.ninja.d  skia.sln  toolchain.ninja
vs2015/static_release_x86/: args.gn  build.ninja.d  skia.sln  toolchain.ninja
